--- a/client/components/Footer/footer.module.scss
+++ b/client/components/Footer/footer.module.scss
@@ -66,7 +66,7 @@
 }
 
 .copyright {
-  background-color: #b7b7b7;
+  background-color: $color;
   padding: 25px 0;
   text-align: center;
   color: #fff;
