--- a/client/styles/globals.scss
+++ b/client/styles/globals.scss
@@ -199,34 +199,60 @@ img {
       margin-left: var(--ck-inline-image-style-spacing);
     }
   }
+
+  .text-tiny {
+    font-size: .7em;
+  }
+
+  .text-small {
+    font-size: .85em;
+  }
+
+  .text-big {
+    font-size: 1.4em;
+  }
+
+  .text-huge {
+    font-size: 1.8em;
+  }
+
+  blockquote {
+    overflow: hidden;
+    padding-right: 1.5em;
+    padding-left: 1.5em;
+    margin-left: 0;
+    margin-right: 0;
+    font-style: italic;
+    border-left: 5px solid #ccc;
+  }
 }
 
 .text {
   font-size: 12pt;
   line-height: 23px;
 
-  .raw-html-embed {
-    position: relative;
-    padding-bottom: 56.25%; /* задаёт высоту контейнера для 16:9 (если 4:3 — поставьте 75%) */
-    overflow: hidden;
+  @media (max-width: $tablet-width-only) {
+    .raw-html-embed {
+      position: relative;
+      padding-bottom: 56.25%; /* задаёт высоту контейнера для 16:9 (если 4:3 — поставьте 75%) */
+      overflow: hidden;
 
-    //@media (min-width: $tablet-width) {
-    //  max-width: 640px;
-    //  padding-bottom: 360px;
-    //  margin: auto;
-    //}
-    //
-    iframe {
-      position: absolute;
-      top: 0;
-      left: 0;
-      width: 100%;
-      height: 100%;
+      & > iframe, div, img {
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+      }
     }
   }
 
-  figure {
+  figure, iframe {
     margin-left: auto;
     margin-right: auto;
+  }
+
+  iframe {
+    display: block;
   }
 }
